force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__ActionCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionCriteria__c</fullName>
    <description>Represents the criteria to search for product or match a product depending on the type of the rule.</description>
    <label>Action Criteria</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>