force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__ActionDisposition__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionDisposition__c</fullName>
    <description>Whether the action can be ignored.</description>
    <label>Action Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>