force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__ActionIntent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActionIntent__c</fullName>
    <description>Describes the intent of the action</description>
    <label>Action Intent</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus_Config2__ActionType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Auto Include</fullName>
            </value>
            <value>
                <fullName>Prompt</fullName>
            </value>
            <value>
                <fullName>Show Message</fullName>
            </value>
            <value>
                <fullName>Check on Finalization</fullName>
            </value>
            <value>
                <fullName>Disable Selection</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>