force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__AutoExclude__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AutoExclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Match only in asset, ignore cart.</description>
    <label>Ignore Cart</label>
    <type>Checkbox</type>
</CustomField>