force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__AutoInclude__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AutoInclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to automatically include the product matched by the include type rule action criteria.</description>
    <label>Auto Include (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>