force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__ConstraintRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConstraintRuleId__c</fullName>
    <description>References the master Constraint Rule record</description>
    <label>Constraint Rule</label>
    <referenceTo>Apttus_Config2__ConstraintRule__c</referenceTo>
    <relationshipLabel>Constraint Rule Actions</relationshipLabel>
    <relationshipName>ConstraintRuleActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>