force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__EditCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EditCriteria__c</fullName>
    <description>Edit &quot;Action Criteria&quot; button</description>
    <formula>HYPERLINK(&quot;/apex/Apttus_Config2__ConstraintRuleActionCriteriaEdit?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_Config2__Button_EditCriteria&quot;, &quot;Edit Criteria&quot;),&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit Criteria</label>
    <type>Text</type>
</CustomField>