force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__IncludeMatchRule__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncludeMatchRule__c</fullName>
    <description>Applicable only to include type rule action. For include min/max include min product should be specified.</description>
    <label>Min/Max Match Rule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus_Config2__ActionType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Include Any</fullName>
            </value>
            <value>
                <fullName>Include All</fullName>
            </value>
            <value>
                <fullName>Include Min/Max</fullName>
            </value>
            <value>
                <fullName>Exclude All</fullName>
            </value>
            <value>
                <fullName>Exclude After One</fullName>
            </value>
            <value>
                <fullName>Exclude After Max</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>