force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__IncludeMaxProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncludeMaxProducts__c</fullName>
    <description>Maximum number of products that can be included. It is not applicable to include type rule action. Future recommend type rule action will require this field</description>
    <label>Max Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>