force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__IncludeMinProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncludeMinProducts__c</fullName>
    <description>Minimum number of products that should be selected until the rule action message is displayed to select a product.</description>
    <label>Min Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>