force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__Message__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Message__c</fullName>
    <description>Message entered in this field is displayed when the rule action requires user attention.</description>
    <inlineHelpText>Example: Please select one of the following product {0}.</inlineHelpText>
    <label>Message</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>