force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCategory__c</fullName>
    <description>Product category should be specified when product scope is set as Product Category</description>
    <label>Product Category (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>