force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFamily__c</fullName>
    <description>Product family should be specified when the product scope is set as Product Family.</description>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>