force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__ProductGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Group should be specified only when product scope is set as product group</description>
    <label>Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Constraint Rule Actions</relationshipLabel>
    <relationshipName>ConstraintRuleActions</relationshipName>
    <type>Lookup</type>
</CustomField>