force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product should be specified when product scope is set as Product.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Constraint Rule Actions</relationshipLabel>
    <relationshipName>ConstraintRuleActions</relationshipName>
    <type>Lookup</type>
</CustomField>