force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__RepeatInclusion__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RepeatInclusion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For every line item with triggering products there should be a line item with action product.</description>
    <inlineHelpText>Check this to repeat inclusion.</inlineHelpText>
    <label>Repeat Inclusion</label>
    <type>Checkbox</type>
</CustomField>